Add chooser subject and observer; notify observer on item selected

--- a/hyperapp/client/view_chooser.yaml
+++ b/hyperapp/client/view_chooser.yaml
@@ -3,5 +3,6 @@ import:
     view_chooser:
     - view_chooser
   code:
-  - client.column
-  - client.simple_list_object
+    - client.chooser_observer
+    - client.column
+    - client.simple_list_object
