--- a/hyperapp/client/master_details.yaml
+++ b/hyperapp/client/master_details.yaml
@@ -1,5 +1,7 @@
 import:
   types:
+    layout_editor:
+      - object_layout_editor
     master_details:
       - master_details_layout
   code:
@@ -7,3 +9,4 @@ import:
     - client.layout
     - client.list_object
     - client.tree_object
+    - client.view_chooser
