Use object module for columns resource key, not piece type ref

--- a/hyperapp/client/layout_editor.resources.en.yaml
+++ b/hyperapp/client/layout_editor.resources.en.yaml
@@ -1,3 +1,10 @@
+module:client.layout_editor:LayoutEditor:
+  columns:
+    name:
+      text: Name
+    text:
+      text: Text
+
 module:client.layout_editor:ThisModule:
   commands:
     open_view_layout:
