wip: AvailableObjectLayouts: return layout ref, not layout

--- a/hyperapp/client/list_view.yaml
+++ b/hyperapp/client/list_view.yaml
@@ -2,6 +2,8 @@ import:
   types:
     core:
       - handle
+    list_view:
+      - list_view
   code:
     - client.list_object
     - client.layout
