--- a/hyperapp/client/tree_view.yaml
+++ b/hyperapp/client/tree_view.yaml
@@ -2,6 +2,8 @@ import:
   types:
     core:
       - handle
+    tree_view:
+      - tree_view
   code:
     - client.tree_object
     - client.layout
