--- a/hyperapp/client/record_view.yaml
+++ b/hyperapp/client/record_view.yaml
@@ -1,7 +1,7 @@
 import:
   types:
     record_view:
-    - record_view
+    - record_layout
   code:
     - client.layout
     - client.record_object
