Update text view

--- a/hyperapp/client/text_view.yaml
+++ b/hyperapp/client/text_view.yaml
@@ -1,7 +1,7 @@
 import:
   types:
-    core:
-      - obj_handle
+    text:
+      - text_edit_layout
   code:
     - client.layout
     - client.view
