--- a/hyperapp/client/object_layout_root.yaml
+++ b/hyperapp/client/object_layout_root.yaml
@@ -1,7 +1,13 @@
 import:
   types:
+    params_editor:
+      - bound_argument
+      - field
+      - params_editor
+    view_chooser:
+      - view_chooser
     layout_editor:
-    - object_layout_editor
+      - object_layout_editor
   code:
     - client.layout
     - client.view_chooser
