Layout for tree-to-list adapter

--- a/hyperapp/client/tree_to_list_adapter.yaml
+++ b/hyperapp/client/tree_to_list_adapter.yaml
@@ -1,8 +1,9 @@
 import:
   types:
     tree_to_list_adapter:
-    - tree_to_list_adapter
-    - tree_to_list_adapter_layout
+      - tree_to_list_adapter
+      - tree_to_list_adapter_layout
   code:
-  - client.tree_object
-  - client.list_object
+    - client.layout
+    - client.tree_object
+    - client.list_object
