Create category_list module

--- a/hyperapp/client/navigator/navigator.yaml
+++ b/hyperapp/client/navigator/navigator.yaml
@@ -1,7 +1,7 @@
 import:
   types:
-    layout_editor:
-    - object_layout_editor
+    category_list:
+    - category_list
     navigator:
     - navigator
   code:
