Category list: add 'open' command; add category field to object_layout_editor

--- a/hyperapp/client/category_list.yaml
+++ b/hyperapp/client/category_list.yaml
@@ -2,6 +2,8 @@ import:
   types:
     category_list:
       - category_list
+    layout_editor:
+      - object_layout_editor
   code:
     - client.column
     - client.simple_list_object
