Create layout key list

--- a/hyperapp/client/navigator/navigator.yaml
+++ b/hyperapp/client/navigator/navigator.yaml
@@ -1,7 +1,7 @@
 import:
   types:
-    category_list:
-    - category_list
+    layout_key_list:
+    - layout_key_list
     navigator:
     - navigator
   code:
