--- a/hyperapp/client/params_editor_sample.yaml
+++ b/hyperapp/client/params_editor_sample.yaml
@@ -5,6 +5,7 @@ import:
     text:
       - text
   code:
+    - client.object_command
     - client.column
     - client.simple_list_object
     - client.view_chooser
