--- a/hyperapp/client/fs_local_service.yaml
+++ b/hyperapp/client/fs_local_service.yaml
@@ -1,10 +1,11 @@
 import:
   types:
     fs:
-    - fs
-    - row_fetch_request
-    - local_fs_service
+      - fs
+      - row_fetch_request
+      - local_fs_service
     tree_to_list_adapter:
-    - tree_to_list_adapter
+      - tree_to_list_adapter
   code:
-  - common.fs_service_impl
+    - client.object_command
+    - common.fs_service_impl
