--- a/hyperapp/client/log_viewer.yaml
+++ b/hyperapp/client/log_viewer.yaml
@@ -6,6 +6,7 @@ import:
       - log_viewer
       - log_record
   code:
+    - client.object_command
     - client.column
     - client.tree_object
     - client.list_object
