--- a/hyperapp/client/tree_to_list_adapter_sample.yaml
+++ b/hyperapp/client/tree_to_list_adapter_sample.yaml
@@ -1,6 +1,8 @@
 import:
   types:
     tree_view_sample:
-    - tree_view_sample_object
+      - tree_view_sample_object
     tree_to_list_adapter:
-    - tree_to_list_adapter
+      - tree_to_list_adapter
+  code:
+    - client.object_command
