--- a/hyperapp/client/view_chooser.yaml
+++ b/hyperapp/client/view_chooser.yaml
@@ -3,6 +3,7 @@ import:
     view_chooser:
     - view_chooser
   code:
+    - client.object_command
     - client.chooser
     - client.column
     - client.simple_list_object
