--- a/hyperapp/client/layout_key_list.yaml
+++ b/hyperapp/client/layout_key_list.yaml
@@ -5,6 +5,7 @@ import:
     category_list:
       - category_list
   code:
+    - client.object_command
     - client.column
     - client.command_hub
     - client.simple_list_object
