--- a/hyperapp/client/master_details.yaml
+++ b/hyperapp/client/master_details.yaml
@@ -5,6 +5,7 @@ import:
     master_details:
       - master_details_layout
   code:
+    - client.object_command
     - client.composite
     - client.layout
     - client.list_object
