--- a/hyperapp/client/ref_list.yaml
+++ b/hyperapp/client/ref_list.yaml
@@ -5,5 +5,6 @@ import:
     ref_list:
       - dynamic_ref_list
   code:
+    - client.object_command
     - client.column
     - client.list_object
