Split params editor module; use object_command

--- a/hyperapp/client/params_editor_object.resources.en.yaml
+++ b/hyperapp/client/params_editor_object.resources.en.yaml
@@ -1,4 +1,4 @@
-module:client.params_editor:ParamsEditor:
+module:client.params_editor_object:ParamsEditor:
   commands:
     submit:
       text: Submit
