--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pytest==4.0.2
 pytest-asyncio==0.9.0
 aiomock
 ply
-PySide2
+pyside2==5.14.2.2
 asyncqt==0.7.0
 
 # installing pyside using pip has following package requirements:
