--- a/hyperapp/client/navigator/navigator.yaml
+++ b/hyperapp/client/navigator/navigator.yaml
@@ -1,11 +1,11 @@
 import:
   types:
-    layout_key_list:
-    - layout_key_list
     navigator:
-    - navigator
+      - navigator
+    layout_editor:
+      - object_layout_editor
     command_list:
       - command_list
   code:
-  - client.view
-  - client.layout
+    - client.view
+    - client.layout
