--- a/hyperapp/client/command_list.yaml
+++ b/hyperapp/client/command_list.yaml
@@ -2,7 +2,10 @@ import:
   types:
     command_list:
       - command_list
+    layout_editor:
+      - object_layout_editor
   code:
     - client.column
     - client.command_hub
+    - client.object_command
     - client.simple_list_object
