Add fields to record layout data; move field producing to layout rec producer

--- a/hyperapp/client/record_view.yaml
+++ b/hyperapp/client/record_view.yaml
@@ -1,7 +1,8 @@
 import:
   types:
     record_view:
-    - record_layout
+      - record_layout_field
+      - record_layout
   code:
     - client.layout
     - client.record_object
