--- a/hyperapp/client/command_list.yaml
+++ b/hyperapp/client/command_list.yaml
@@ -8,4 +8,5 @@ import:
     - client.column
     - client.command_hub
     - client.object_command
+    - client.layout
     - client.simple_list_object
