--- a/hyperapp/client/line_edit.resources.en.yaml
+++ b/hyperapp/client/line_edit.resources.en.yaml
@@ -3,6 +3,10 @@ module:client.line_edit:LineEditLayout:
     set_editable:
       text: Set editable
       description: Switch line edit to editable mode
+      shortcuts:
+        - E
     set_read_only:
       text: Set read-only
       description: Switch line edit to read-only mode
+      shortcuts:
+        - E
