--- a/hyperapp/client/command_list.resources.en.yaml
+++ b/hyperapp/client/command_list.resources.en.yaml
@@ -11,8 +11,11 @@ module:client.command_list:CommandList:
       text: Run
       description: Run selected command
       is_default: yes
+    add:
+      text: Add
+      description: Add command from all available code commands
+      shortcuts: [Ins]
     layout:
       text: Edit layout
       description: Open Layout editor for selected command
-      shortcuts:
-        - Y
+      shortcuts: [Y]
