Add layout_command module; use in tree layout

--- a/hyperapp/client/tree_view.yaml
+++ b/hyperapp/client/tree_view.yaml
@@ -7,5 +7,6 @@ import:
   code:
     - client.tree_object
     - client.layout
+    - client.layout_command
     - client.view
     - client.items_view
