Move common layout functions to base classes

--- a/hyperapp/client/code_command_chooser.yaml
+++ b/hyperapp/client/code_command_chooser.yaml
@@ -6,5 +6,5 @@ import:
     - client.object_command
     - client.chooser
     - client.column
-    - client.layout
+    - client.layout_handle
     - client.simple_list_object
