--- a/hyperapp/client/layout_manager.yaml
+++ b/hyperapp/client/layout_manager.yaml
@@ -4,5 +4,6 @@ import:
       - root_layout
   code:
     - client.object_command
+    - client.layout_handle
     - client.layout
     - client.command_hub
