--- a/hyperapp/client/tree_view_sample.yaml
+++ b/hyperapp/client/tree_view_sample.yaml
@@ -2,6 +2,9 @@ import:
   types:
     tree_view_sample:
       - tree_view_sample_object
+      - tree_sample_article
+    line:
+      - line
     text:
       - text
   code:
@@ -9,3 +12,4 @@ import:
     - client.column
     - client.tree_object
     - client.tree_view
+    - client.record_object
