--- a/hyperapp/client/layout_handle.yaml
+++ b/hyperapp/client/layout_handle.yaml
@@ -1,6 +1,7 @@
 import:
   types:
     layout:
-      - layout_handle
+      - default_layout_handle
+      - command_layout_handle
   code:
     - client.async_capsule_registry
