--- a/hyperapp/client/list_view_sample.yaml
+++ b/hyperapp/client/list_view_sample.yaml
@@ -1,6 +1,9 @@
 import:
   types:
+    object_type:
+      - object_command
     list_view_sample:
+      - list_view_sample_object_type
       - list_view_sample_object
       - list_sample_article
     line:
@@ -11,4 +14,5 @@ import:
     - client.object_command
     - client.column
     - client.list_object
+    - client.text_object
     - client.record_object
