--- a/hyperapp/client/tree_view_sample.yaml
+++ b/hyperapp/client/tree_view_sample.yaml
@@ -1,6 +1,12 @@
 import:
   types:
+    object_type:
+      - object_command
+    record_object:
+      - record_type_field
     tree_view_sample:
+      - tree_view_sample_object_type
+      - tree_view_sample_article_type
       - tree_view_sample_object
       - tree_sample_article
     line:
@@ -11,5 +17,6 @@ import:
     - client.object_command
     - client.column
     - client.tree_object
-    - client.tree_view
+    - client.line_edit
+    - client.text_object
     - client.record_object
