--- a/hyperapp/client/command_list.yaml
+++ b/hyperapp/client/command_list.yaml
@@ -1,6 +1,9 @@
 import:
   types:
+    object_type:
+      - object_command
     command_list:
+      - command_list_object_type
       - command_list
     layout_editor:
       - object_layout_editor
