Add type for layout editor object

--- a/hyperapp/client/layout_editor.yaml
+++ b/hyperapp/client/layout_editor.yaml
@@ -1,5 +1,7 @@
 import:
   types:
+    object_type:
+      - object_command
     params_editor:
       - bound_argument
       - field
@@ -7,6 +9,7 @@ import:
     view_chooser:
       - view_chooser
     layout_editor:
+      - layout_editor_object_type
       - view_layout_editor
       - object_layout_editor
   code:
