--- a/hyperapp/client/tree_to_list_adapter.yaml
+++ b/hyperapp/client/tree_to_list_adapter.yaml
@@ -1,5 +1,7 @@
 import:
   types:
+    list_object:
+      - list_object_type
     tree_to_list_adapter:
       - tree_to_list_adapter
       - tree_to_list_adapter_layout
