--- a/hyperapp/client/layout_handle.yaml
+++ b/hyperapp/client/layout_handle.yaml
@@ -1,7 +1,6 @@
 import:
   types:
     layout:
-      - default_layout_handle
-      - command_layout_handle
+      - layout_handle
   code:
     - client.async_capsule_registry
