Add open_tree_view_sample_article command

--- a/hyperapp/client/tree_to_list_adapter_sample.resources.en.yaml
+++ b/hyperapp/client/tree_to_list_adapter_sample.resources.en.yaml
@@ -4,4 +4,4 @@ module:client.tree_to_list_adapter_sample:ThisModule:
       text: Open tree-to-list adapter sample
       description: Open tree-to-list adapter sample
       shortcuts:
-      - Alt+Ctrl+Shift+T
+      - Alt+Ctrl+Shift+L
