Add origin/command layout association saving

--- a/hyperapp/client/object_layout_association.yaml
+++ b/hyperapp/client/object_layout_association.yaml
@@ -1,4 +1,5 @@
 import:
   types:
     object_layout_association:
-      - repository_record
+      - type_repository_record
+      - command_repository_record
