--- a/log-config/server-with-tcp.yaml
+++ b/log-config/server-with-tcp.yaml
@@ -21,7 +21,7 @@ handlers:
     backupCount: 5
 
 loggers:
-  hyperapp.common.ref_registry: {level: INFO}
+  hyperapp.common.mosaic: {level: INFO}
   hyperapp.common.ref_resolver: {level: WARNING}
   hyperapp.common.ref_collector: {level: WARNING}
   hyperapp.common.type_module_repository: {level: WARNING}
