--- a/log-config/client.yaml
+++ b/log-config/client.yaml
@@ -21,7 +21,7 @@ handlers:
     backupCount: 5
 
 loggers:
-  hyperapp.common.ref_resolver: {level: WARNING}
+  hyperapp.common.web: {level: WARNING}
   hyperapp.common.logger: {level: WARNING}
   hyperapp.common.ref_collector: {level: INFO}
   hyperapp.client.registry: {level: INFO}
