--- a/log-config/server.yaml
+++ b/log-config/server.yaml
@@ -22,7 +22,7 @@ handlers:
 
 loggers:
   hyperapp.common.mosaic: {level: INFO}
-  hyperapp.common.ref_resolver: {level: WARNING}
+  hyperapp.common.web: {level: WARNING}
   hyperapp.common.logger: {level: WARNING}
   hyperapp.common.ref_collector: {level: WARNING}
   hyperapp.common.type_module_repository: {level: WARNING}
