--- a/log-config/test.yaml
+++ b/log-config/test.yaml
@@ -2,7 +2,7 @@ version: 1
 disable_existing_loggers: False
 
 loggers:
-  hyperapp.common.ref_resolver: {level: INFO}
+  hyperapp.common.web: {level: INFO}
   hyperapp.common.ref_collector: {level: INFO}
   hyperapp.common.type_module_repository: {level: WARNING}
   hyperapp.common.module_manager: {level: INFO}
