--- a/hyperapp/common/test/code_module_2.yaml
+++ b/hyperapp/common/test/code_module_2.yaml
@@ -2,7 +2,7 @@ import:
   types:
     type_module_2:
       - some_bool_list_opt
-      - text_object_2
-      - test_iface_b
+      # - text_object_2
+      # - test_iface_b
   code:
     - code_module_1
