--- a/hyperapp/common/visitor.yaml
+++ b/hyperapp/common/visitor.yaml
@@ -1,8 +1,1 @@
-import:
-  types:
-    packet:
-      - client_packet
-      - server_result_response
-      - server_error_response
-    error:
-      - error
+# empty
