Make client module dynamic, move to async/ui

--- a/hyperapp/client/object_layout_association.yaml
+++ b/hyperapp/client/object_layout_association.yaml
@@ -3,3 +3,5 @@ import:
     object_layout_association:
       - type_repository_record
       - command_repository_record
+  code:
+    - async.ui.module
