Make client util module dynamic, move to async/ui/qt

--- a/hyperapp/client/list_view.yaml
+++ b/hyperapp/client/list_view.yaml
@@ -5,6 +5,7 @@ import:
   code:
     - client.list_object
     - client.layout
+    - async.ui.qt.util
     - client.view
     - client.items_view
     - async.ui.module
