--- a/hyperapp/client/tree_view.yaml
+++ b/hyperapp/client/tree_view.yaml
@@ -3,6 +3,7 @@ import:
     tree_view:
       - tree_layout
   code:
+    - async.ui.qt.util
     - client.tree_object
     - client.layout
     - client.view
