Make client command module dynamic, move to async/ui

--- a/hyperapp/client/command_list.yaml
+++ b/hyperapp/client/command_list.yaml
@@ -13,6 +13,7 @@ import:
       - field
       - params_editor
   code:
+    - async.ui.command
     - client.column
     - client.command_hub
     - client.object_command
