--- a/hyperapp/client/layout_editor.yaml
+++ b/hyperapp/client/layout_editor.yaml
@@ -15,6 +15,7 @@ import:
   code:
     - client.object_command
     - client.layout_handle
+    - async.ui.command
     - client.command_hub
     - client.column
     - client.tree_object
