--- a/hyperapp/client/navigator/navigator.yaml
+++ b/hyperapp/client/navigator/navigator.yaml
@@ -8,6 +8,7 @@ import:
       - command_list
   code:
     - client.view
+    - async.ui.command
     - client.layout
     - client.layout_command
     - async.ui.module
