--- a/hyperapp/client/tab_view.yaml
+++ b/hyperapp/client/tab_view.yaml
@@ -9,6 +9,7 @@ import:
   code:
     - async.ui.qt.util
     - client.view
+    - async.ui.command
     - client.layout
     - client.layout_handle
     - client.view_chooser
