--- a/hyperapp/client/window.yaml
+++ b/hyperapp/client/window.yaml
@@ -7,6 +7,7 @@ import:
   code:
   - async.ui.qt.util
   - client.view
+  - async.ui.command
   - client.layout
   - client.tab_view
   - async.ui.module
