Make client commander and object modules dynamic; move to async/ui directory

--- a/hyperapp/client/layout.yaml
+++ b/hyperapp/client/layout.yaml
@@ -3,6 +3,7 @@ import:
     layout:
       - command
   code:
+    - async.ui.commander
     - client.layout_command
     - client.layout_handle
     - client.items_view
