--- a/hyperapp/client/text_view.yaml
+++ b/hyperapp/client/text_view.yaml
@@ -3,6 +3,7 @@ import:
     text:
       - text_edit_layout
   code:
+    - async.ui.object
     - client.layout
     - client.view
     - client.text_object
