--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 log_format = %(asctime)s.%(msecs)03d [%(context)s] %(name)-46s %(lineno)4d %(threadName)10s %(levelname)-8s %(message).300s
 log_date_format = %M:%S
 log_cli_level = error
+log_level = debug
