Remove list_object module, use list_ot type

--- a/hyperapp/client/list_object.yaml
+++ b/hyperapp/client/list_object.yaml
@@ -1,7 +1,7 @@
 import:
   types:
-    list_object:
-      - list_object_type
+    list_object_type:
+      - list_ot
   code:
     - async.ui.object
     - client.column
