Add rpc element command

--- a/hyperapp/server/sample_list.yaml
+++ b/hyperapp/server/sample_list.yaml
@@ -5,5 +5,7 @@ import:
     list_object_type:
       - column
       - list_ot
+    rpc_command:
+      - rpc_element_command
   code:
     - common.list_object
