Sample list: add 'edit' command

--- a/hyperapp/client/rpc_command.resources.en.yaml
+++ b/hyperapp/client/rpc_command.resources.en.yaml
@@ -4,3 +4,7 @@ module:async.ui.rpc_command:RpcElementCommand:
       text: Open
       description: Open selected element
       is_default: yes
+    edit:
+      text: Edit
+      description: Open selected element article for editing
+      shortcuts: [E]
