Replace TextObject and LineObject with StringObject; remove text type

--- a/hyperapp/client/line_edit.yaml
+++ b/hyperapp/client/line_edit.yaml
@@ -1,7 +1,8 @@
 import:
   types:
+    string:
+      - string_object_type
     line:
-      - line_object_type
       - line_edit_layout
   code:
     - async.ui.object
