--- a/hyperapp/client/list_view_sample.yaml
+++ b/hyperapp/client/list_view_sample.yaml
@@ -2,7 +2,7 @@ import:
   types:
     object_type:
       - object_command
-    record_object:
+    record_ot:
       - field
     list_view_sample:
       - list_view_sample_object_type
