--- a/hyperapp/client/tree_to_list_adapter.yaml
+++ b/hyperapp/client/tree_to_list_adapter.yaml
@@ -2,7 +2,7 @@ import:
   types:
     object_type:
       - object_command
-    list_object_type:
+    list_ot:
       - list_ot
     tree_to_list_adapter:
       - tree_to_list_adapter
