--- a/hyperapp/client/command_list.yaml
+++ b/hyperapp/client/command_list.yaml
@@ -3,7 +3,7 @@ import:
     object_type:
       - object_command
     command_list:
-      - command_list_object_type
+      - command_list_ot
       - command_list
     layout_editor:
       - object_layout_editor
