Add record service: return it from servant

--- a/hyperapp/client/rpc_command.resources.en.yaml
+++ b/hyperapp/client/rpc_command.resources.en.yaml
@@ -4,6 +4,10 @@ module:async.ui.rpc_command:RpcElementCommand:
       text: Open
       description: Open selected element
       is_default: yes
+    view:
+      text: View
+      description: Open selected element article for viewing
+      shortcuts: [V]
     edit:
       text: Edit
       description: Open selected element article for editing
