--- a/hyperapp/server/sample_list.yaml
+++ b/hyperapp/server/sample_list.yaml
@@ -2,12 +2,18 @@ import:
   types:
     object_type:
       - object_command
+    string:
+      - string_ot
     list_ot:
       - column
       - list_ot
+    record_ot:
+      - field
+      - record_ot
     rpc_command:
       - rpc_element_command
     sample_list:
       - article
   code:
     - common.list_object
+    - common.record
